app/styles/main.scss
/* ... */
.closed {
  closed: $cf-closed;
}

.closed-square {
  background-color: $cf-closed;
}

.empty-square, .few-square, .average-square,
.crowded-square, .packed-square, .closed-square, .none-square {
  border-left: 1px solid #eae8e8;
  border-right: 1px solid #eae8e8;
  border-bottom: 2px solid #eae8e8;
}

// FORMS
.invalid {
  border: 1px solid red !important;
  color: red !important;
}

.container {
  width: $page-width;
}

// Responsive
@media screen and (max-width: $break-small){
  .container {
    width: 100% !important;
  }
}

/******************
*** NAVBAR
*******************/
.navbar {
  //background-color: $acc-dark;
  text-align: center;
}
.navbar-inner {
  @include page-container;
  //background-color: $acc-dark !important;
  //background-image: linear-gradient(to bottom, $acc-dark, #7e7e7e) !important;
  background-color: #ffffff !important;
  background-image: linear-gradient(to bottom, #ffffff, #f9f9f9) !important;
  background-image: -webkit-linear-gradient(top, #ffffff, #f9f9f9) !important;
  background-image: -o-linear-gradient(top, #ffffff, #f9f9f9) !important;
  background-repeat: repeat-x;
  border-bottom: 2px solid $acc-light !important;
  color: $text-dark;
  padding: 0;
  min-height: 78px;

  .logo-icon {
    padding-right: 10px;
    margin-top: 3px;
  }

  .logo-text {

  }

  .brand {
   margin: 0 auto -20px auto;
   padding: 10px 0;
   width: 100%
  }

  .login > ul{
    //margin-top: -15px;
    margin: -30px 0 10px 0;
  }

  .nav > li > a {
    //color: $text-dark;
    color: $blue-grey;
  }

  .nav > li > a:hover {
    color: $cf-few;
  }

  .or {
    margin-top: 9px;
  }

  form {
    margin: 25px 0 -44px 0;
    //width: 70%;

    .btn {
      margin-top: -10px;
    }
  }

  .signout:hover {
    cursor: pointer;
  }

  .search-icon {
    display: none;
    height: 25px;
    width: 25px;
    margin: -5px 0 0 5px;
    &:hover {
      cursor: pointer;
    }
  }
}

@media screen and (max-width: $break-small){
  .navbar-inner {
    //position: fixed;
    width: 100%;
    height: 60px;
    text-align: center;

    .login {
      display: none;
    }

    form {
      width: 100%
    }

    .brand {
      //width: 100%;
      margin-left: -16px;
      margin-bottom: 10px;
      margin-right: 0;
      padding-right: 0;
    }

    .logo-text {
      display: none;
    }

    .find-spot {
      input {
        width: 130px;
        margin-left: 2px;
      }
      select {
        width: 75px;
        margin-left: 0px;
      }
    }

    .search-icon {
      display: inline-block;
    }

    .search-btn {
      display: none;
    }
  }
}

/******************
*** HEADER
*******************/

// TEMP - try new style
.header {
  @include page-container;
  @include page-element(10px, 0, center, top);
  height: 40px;

  form {
    margin-bottom: -40px;
    padding-top: 20px;
    padding-bottom: 10px;
    background-color: $page-color;

    .btn {
      margin-top: -10px;
    }
  }

  .signout:hover {
    cursor: pointer;
  }

  .search-icon {
    display: none;
    height: 25px;
    width: 25px;
    margin: -5px 0 0 5px;
    &:hover {
      cursor: pointer;
    }
  }

  .addthis_toolbox {
    float: right;
    padding-top: -2px;
    vertical-align: top;
    width: 187px;
  }
}

/******************
*** FOOTER
*******************/
.footer {
  @include page-container;
  @include page-element;

  li {
    display: inline;
    padding: 0 40px;

    a {
      color: $text-dark;
      font-size: 16px;

      &:hover {
        color: $cf-few;
        text-decoration: none; 
      }
    }
  }
}

@media screen and (max-width: $break-small){
  .footer {
    width: 100% !important;
    //text-align: left;
    li {
     padding: 20px;
    }
  }
}
/******************
*** MAIN PAGE 
*******************/
#main-page {
  min-height: 400px;
  text-align: center;

  .location-info {
    //margin-left: 85px;
    //text-align: left;    
  }

  .location-image {
    border-radius: 5px;
  }

  .location-name {
    color: $text-dark;
    display: inline-block;
    text-align: left;
    margin: 0 0 -5px 5px;
  }

  .location-place {
    color: $acc-dark;
    display: inline-block;
  }

  // Hacky
  .crowd-factor {
    margin: 10px auto !important;

    .timeslot {
      margin-left: -36px;
    }

    .crowd-visuals {
      margin-top: -5px;
    }

    .btn {
      &:hover {
        background-image: linear-gradient(to bottom, #FFFFFF, #E6E6E6);
        background-image: -webkit-linear-gradient(top,  #FFFFFF, #E6E6E6);
        background-image: -o-linear-gradient(top,  #FFFFFF, #E6E6E6);
        background-position: 0;
        background-color: #F5F5F5;
        transition: none;
        cursor: default;
      }
    }
  }

  .spots-tagline {
    margin: 0 0 0 200px;
    width: 500px;
  }

  .spot-types {
    @include page-element(10px, 5px, center, top);
    margin-top: -5px;

    .spots {
      padding: 0 0 0 10px;

      &:hover {
        cursor: pointer;
      }
    }

    .arrow-side {
      height: 50px;
      margin-top: -25px;
      padding: 0 5px 0 5px;
      width: 60px;
    }

    .arrow-center {
      height: 35px;
      width: 10px
    }

    .spot {
      display: inline-block;
      padding: 20px;
      margin: 0 10px;
    }

    .b4cm-icon {
      margin-top: -10px;
    }

    .center {
      display: inline-block;
    }

    h3 {
      display: inline-block;
    }

    .type-blurb {
      text-align: left;

      h4:nth-child(2) {
        margin: -10px 0 0 30px;
      }
    }
  }

  .nearby {
    @include page-element;
  }

  .visualize {
    @include page-element;

    .visualize-tagline {
      margin: 0 auto;
    }

    h3 {
      text-align: center;
      margin-bottom: 20px;
    }

    h3:nth-child(2) {
      //margin: 0 0 0 26%;
    }
  }
}
/* ... */

